2010-07-02  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclInt.decls  [Bug #803489] Tcl_FindNamespace problem in the
	* generic/tclIntDecls.h Stubs table
	* generic/tclStubInit.c

2010-07-02  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclExecute.c (IllegalExprOperandType): [Bug 3024379]: Made
	sure that errors caused by an argument to an operator being outside
	the domain of the operator all result in ::errorCode being ARITH
	DOMAIN and not NONE.

2010-07-01  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/rules.vc              [Bug #3020677] wish can't link reg1.2
	* tools/checkLibraryDoc.tcl formatting, spacing, cleanup unused variables
	* tools/eolFix.tcl          no change in generated output
	* tools/fix_tommath_h.tcl
	* tools/genStubs.tcl
	* tools/index.tcl
	* tools/man2help2.tcl
	* tools/regexpTestLib.tcl
	* tools/tsdPerf.tcl
	* tools/uniClass.tcl
	* tools/uniParse.tcl

2010-07-01  Donal K. Fellows  <dkf@users.sf.net>

	* doc/mathop.n: [Bug 3023165]: Fix typo that was preventing proper
	rendering of the exclusive-or operator.

2010-06-28  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclPosixStr.c: [Bug 3019634]: errno.h and tclWinPort.h have
	conflicting definitions. Added messages for ENOTRECOVERABLE, EOTHER,
	ECANCELED and EOWNERDEAD, and fixed various typing mistakes in other
	messages.

2010-06-25  Reinhard Max  <max@suse.de>

	* tests/socket.test: Prevent a race condition during shutdown of the
	remote test server that can cause a hang when the server is being run
	in verbose mode.

2010-06-24  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinPort.h: [Bug 3019634]: errno.h and tclWinPort.h have
	conflicting definitions.

		***POTENTIAL INCOMPATIBILITY***
	On win32, the correspondence between errno and the related error
	message, as handled by Tcl_ErrnoMsg() changes. The error message is
	kept the same, but the corresponding errno value might change.

2010-06-22  Donal K. Fellows  <dkf@users.sf.net>
