@@ -939,9 +939,9 @@ declare 235 generic {
 
 
 # TIP 337 made this one public
-declare 236 generic {
-    void TclBackgroundException(Tcl_Interp *interp, int code)
-}
+#declare 236 generic {
+#    void TclBackgroundException(Tcl_Interp *interp, int code)
+#}
 
 # TIP #285: Script cancellation support.
 declare 237 generic {
